src/objects/Document_Type_Search_By_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>determines whether the field should be disabled. If so, agent will not be able to modify the value and it will not be cleared by the clear button</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Type_Doc_Class__c</fullName>
        <description>This field will be used to form junction between Doc Class and field need to be included in the Global URL</description>
        <inlineHelpText>Use to map Doc class with Field. Use Only if using for DOC360 Global URL</inlineHelpText>
        <label>Document Type Doc Class</label>
        <referenceTo>Doctype_Doc_Class__mdt</referenceTo>
        <relationshipLabel>Document Type Search By Fields</relationshipLabel>
        <relationshipName>Document_Type_DocClass_Search_By_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Document_Type_Field__c</fullName>
        <label>Document Type Field</label>
        <referenceTo>Document_Type_Field__mdt</referenceTo>
        <relationshipLabel>Document Type Search By Fields</relationshipLabel>
        <relationshipName>Document_Type_Search_By_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <referenceTo>Document_Type__mdt</referenceTo>
        <relationshipLabel>Document Type Search By Fields</relationshipLabel>
        <relationshipName>Document_Type_Search_By_Fields1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WS_Default_Value__c</fullName>
        <label>WS Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WS_MultiValue_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WS MultiValue Field</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Type Search By Field</label>
    <pluralLabel>Document Type Search By Fields</pluralLabel>
</CustomObject>